--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
         <meta charset="utf-8" /> 
     </head>    
     <body>        
-        This is Text <br />
-        <h1 color="red">This is a Heading</h1>   
-        <img src="buu.png" />     
-        <p>This is a paragraph.</p>    
+        <h1> MY PROFILE </h1>   
+        <img src="PF.png" />     
+        <p> ข้อมูลส่วนตัว </p>  
+        <p> รหัสนิสิต : 64160292 (มกุล 0) </p>  
+        <p> ชื่อ : นายสุริยา รองสูงเนิน </p>    
+        <p> ชื่อเล่น : แบงค์โก้ </p>
+        <p> วันเกิด : 21 มีนาคม 2546 (19 ปี) </p>
+        <p> Facebook : สุริยา รองสูงเนิน </p>
+        <p> IG : bishoppz.21 </p>
+        <p> Line : bgchannel </p>
+        <br>
+        <p> ประวัติการศึกษา </p>
+        <p> 2549-2560 : โรงเรียนนันทนวิทย์ </p>
+        <p> 2561-2563 : โรงเรียนเกาะโพธิ์ถ้วยงามวิทยา </p>
+        <p> 2564-ปัจจุบัน : มหาวิทยาลัยบูรพา </p>
+
     </body>
 </html>
